--- a/GetComments.ipynb
+++ b/GetComments.ipynb
@@ -46,7 +46,7 @@
         "id": "DhjyysUYKvtG"
       },
       "source": [
-        "youTubeApiKey=\"....\" #Get YouTube API Key using this instruction: https://developers.google.com/youtube/v3/getting-started#\n",
+        "youTubeApiKey=\"YOUR_API_KEY_HERE\" #Get YouTube API Key using this instruction: https://developers.google.com/youtube/v3/getting-started#\n",
         "youtube=build('youtube','v3',developerKey=youTubeApiKey)\n"
       ],
       "execution_count": 69,
