--- a/GetLike.ipynb
+++ b/GetLike.ipynb
@@ -41,7 +41,7 @@
     {
       "cell_type": "code",
       "source": [
-        "youTubeApiKey=\".....\" #Get YouTube API Key using this instruction: https://developers.google.com/youtube/v3/getting-started#\n",
+        "youTubeApiKey=\"YOUR_API_KEY_HERE\" #Get YouTube API Key using this instruction: https://developers.google.com/youtube/v3/getting-started#\n",
         "youtube=build('youtube','v3',developerKey=youTubeApiKey)\n"
       ],
       "metadata": {
