--- a/YouTubeChanel.ipynb
+++ b/YouTubeChanel.ipynb
@@ -39,7 +39,7 @@
     {
       "cell_type": "code",
       "source": [
-        "youTubeApiKey=\".....\" #Get YouTube API Key using this instruction: https://developers.google.com/youtube/v3/getting-started#\n",
+        "youTubeApiKey=\"YOUR_API_KEY_HERE\" #Get YouTube API Key using this instruction: https://developers.google.com/youtube/v3/getting-started#\n",
         "youtube=build('youtube','v3',developerKey=youTubeApiKey)\n",
         "channelId='UCAjh5TggrX5Vj-FsoFeW3IA' #To obtain the channel id you can view the source code of the channel page and find https://www.youtube.com/channel/.....\n",
         "\n"
